--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-PySide6>=6.6.0
+# Python version requirement
+python_version >= "3.9" and python_version < "3.13"
+
+
+# GUI framework
+PySide6>=6.6.0,<7.0.0
